
2010-08-22  Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Pretrigger position wasn't initialized correctly on startup
* Bugfix: Wrong samplerate values were sent to the oscilloscope
* Updated exporter class
* Moved constants.h to dso.h and added functions that return strings for enums
* Sample buffer size above scope shows real sample count got from oscilloscope
* Documentation updated

2010-08-23  Oliver Haag  <oliver.haag@gmail.com>
* Saving color settings for printing too
* Added zoomed scope and markers to exports
* Darker default colors for channels in print mode
* Added enum values for DSO-5200 bulk commands

2010-08-24  Oliver Haag  <oliver.haag@gmail.com>
* Documentation of Hantek::Device corrected
* Hantek::Device::bulkReadMulti improved

2010-08-26  Oliver Haag  <oliver.haag@gmail.com>
* Samplerate values sent to device are calculated now, only limited by hardware
* Added the samplerate formula to the documentation
* Documentation updated with additional information from Oleg
* Removed Oleg from AUTHORS

2010-08-29  Oliver Haag  <oliver.haag@gmail.com>
* DSO details are known after Hantek::Control::connectDevice() is executed
* Removed useless initialization in Hantek::Control
* DSO is started after the settings have been transferred
* Added additional debug messages when building as debug binary
* Added support for DSO-5200

2010-08-31  Oliver Haag  <oliver.haag@gmail.com>
* Added manual command sending with Shift+C when bulding as debug binary
* Fixed some uninitialized values in Hantek::Control
* Added debug messages for capture state when building as debug binary

2010-09-15  Oliver Haag  <oliver.haag@gmail.com>
* Made export dialog title translatable
* Fixed export shortcut
* Added csv export

2010-09-15  Oliver Haag  <oliver.haag@gmail.com>
* Added OSX patches by Florian Schirmer <jolt@tuxbox.org>, thanks :)

2010-09-16  Oliver Haag  <oliver.haag@gmail.com>
* Added csv export return value to doExport method
* Fixed DSO-2150 samplerates